[package]
name = "cloudflare_ddns"
version = "0.1.0"
edition = "2021"
author = "david dodda"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
indicatif = "0.16.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cli-table = "0.4"
tokio-cron-scheduler = "0.7.4"
spinners = "4.1.0"